--- a/gb/24/6/10/n14267439.md
+++ b/gb/24/6/10/n14267439.md
@@ -7,7 +7,7 @@
 </h6>
 <hr>
 	<p>【大纪元2024年06月10日讯】（大纪元记者徐曼沅洛杉矶报导）洛杉矶华侨文教服务中心与洛杉矶台美商会青商部（TJCCLA）于6月8日（周六）下午共同举办“新秀博览和全球青商潜力之星”座谈会，邀请2023年侨委会青商潜力之星得奖者傅瑞克、徐凰硕和李育庭分享创业经历，吸引了近百位创业者和青年参与。</p>
-<figure id="attachment_14267458" aria-describedby="caption-attachment-14267458" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14267458-2f41b8093b8d01ba8c2ad134b5bf2b98.jpg"><img class="size-large wp-image-14267458" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267458-2f41b8093b8d01ba8c2ad134b5bf2b98-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-14267458" class="wp-caption-text">2024年6月8日，洛侨中心与洛杉矶台美商会青商部共同举办“新秀博览和全球青商潜力之星”座谈会。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14267458" aria-describedby="caption-attachment-14267458" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14267458-2f41b8093b8d01ba8c2ad134b5bf2b98.jpg"><img decoding="async" class="size-large wp-image-14267458" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267458-2f41b8093b8d01ba8c2ad134b5bf2b98-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-14267458" class="wp-caption-text">2024年6月8日，洛侨中心与洛杉矶台美商会青商部共同举办“新秀博览和全球青商潜力之星”座谈会。（徐曼沅／大纪元）</figcaption></figure>
 <p>洛侨中心主任陈敏永表示，此次活动是希望藉由三位侨委会“潜力之星”得主的经验分享，让洛杉矶地区有意创业的年轻人了解创业过程甘苦，同时促进青年经验交流，凝聚社区力量。</p>
 <p>台美商会青商部会长李达伟表示，此活动缘起于去年参与了侨委会所举办的“潜力之星”参访，许多人从中获得启发与资源，也发现全球有许多青年试图创业。他很高兴该会能与侨委会合作，帮助南加州青年创业者获取更多资讯与机会。</p>
 <p>毕业于加州州立大学长滩分校（CSULB）的傅瑞克双主修金融与国际商务，但他的兴趣是摄影，大学时就当起了婚礼摄影师赚外快，他分享了创业“从0到1”的过程。傅瑞克表示，虽然台湾大多数家长的教育和家庭观念都认为子女只要按部就班工作、领薪水就好，但他建议每个人要寻找自己的兴趣、走自己的路。因不喜欢程式化的打卡上班，傅瑞克毕业后尝试过各种工作的可能性。2018年他创立“其境科技”（Peek Peek VR）之初并不被看好，但2019年全球疫情蔓延，虚拟导览技术因而备受关注，“其境科技”所提供的网络导览（WebTour）适用于多种场合，客户包括尔湾加大（UC Irvine）、洛加大（UCLA）等学校。</p>
@@ -25,28 +25,29 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/29/n14168645.md#1">台美青商年会 曾博恩分享“喜剧张骞”之路</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/8/n10371607.md#1" target="_blank">共产党暴政录：三反五反运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/3/n11232880.md#1" target="_blank">【征文】史上最公平选官制 科举千年兴衰录(1)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/20/n14038182.md#1">没有艾草的加持不是好端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266424.md#1">【时事金扫描】今年高考最难 哪些大学留学触雷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266340.md#1">【菁英论坛】中国经济濒临崩溃 拜登绝非瞎说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266355.md#1">【马克时空】中俄合作突生变 或影响乌战场格局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266633.md#1">中国经济衰退 多省房价跌破千元/平方米</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266630.md#1">分析：李强开会释放中国房地产不妙信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266541.md#1">大陆银行职员买千万别墅 被前儿媳举报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266834.md#1">女版陆片《战狼》翻车 预售票房仅4.6万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266019.md#1">松冈茉优与有冈大贵结婚 两人都是童星出身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266828.md#1">杨颖遭软封杀9个月 两个迹象显示将获解封</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265982.md#1">韩国新人朴柱炫新片挑大梁 压力太大送急诊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266338.md#1">邓超孙俪俏皮发文 甜蜜庆祝两人结婚14周年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265616.md#1">“不死癌症”致关节变形疼痛 9类超级食物抗炎镇痛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/18/n14252931.md#1">哈佛教授采纯肉饮食 抗抑郁降血糖 2类疾病最适合</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264865.md#1">冬病夏治更好！手脚冰冷、易感冒者现在快做1件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/10/n14267439.htm">创业难不难？青商潜力之星：别怕失败</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267439.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
